--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.11.0"
+    "express": "^4.11.0",
+    "jade": "^1.9.1"
   }
 }
